adding fonts, box shadows for fun

--- a/webDev2/midterm/index.html
+++ b/webDev2/midterm/index.html
@@ -5,6 +5,8 @@
 	<title>CSS Zen Garden: The Beauty of CSS Design</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
 
 
