--- a/webDev2/midterm/index.html
+++ b/webDev2/midterm/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-
+	<link href='https://fonts.googleapis.com/css?family=Cousine' rel='stylesheet' type='text/css'>
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
