minimal, minimal styling

--- a/javascript/assignment2/index.html
+++ b/javascript/assignment2/index.html
@@ -6,10 +6,11 @@
 
 <body>
 	<h1>RVCC Pizzeria</h1>
+	<div style="width:40%">
 	Name: <input type="text" id="txtName">
 	Pickup:<input type="radio" id="rbPickup">
 	Delivery:<input type="radio" id="rbDelivery">
-	
+	<br>
 	<br>
 	Style:
 	<select id="ddlStyle">
@@ -26,20 +27,20 @@
 		<option>Medium</option>
 		<option>Small</option>
 	</select>
-	
+	<br>
 	<br>
 	Toppings:
 	<input type="checkbox" id="cbPepperoni">Pepperoni
 	<input type="checkbox" id="cbBlackOlives">Black Olives
 	<input type="checkbox" id="cbMeatball">Meatball
 	<input type="checkbox" id="cbSausage">Sausage
-	
 	<br>
-	<input type="button" id="btnConfirm" value="Confirm Order">
-
 	<br>
-	<textarea id="txtReturn"></textarea>
-	
+	<input type="button" id="btnConfirm" value="Confirm Order" style="width:40%;margin:auto;">
+	<br>
+	<br>
+	<textarea id="txtReturn" style="width:40%;height:5em;margin:auto;"></textarea>
+	</div>
 	<script type="text/javascript">
 
 	</script>
