--- a/javascript/assignment2/index.html
+++ b/javascript/assignment2/index.html
@@ -58,7 +58,8 @@
 			if(!$("rbPickup").checked&&!$("rbDelivery").checked){
 				alert("Please indicate whether your order should be picked up or delivered.");
 				$("rbPickup").focus();
-			}else{
+			}
+			else{
 				if($("rbDelivery").checked){
 					answerText+=$("rbDelivery").value;
 				}
@@ -66,7 +67,6 @@
 					answerText+=$("rbPickup").value;
 				}
 
-				
 				if($('txtName').value==""){
 					alert("Please enter your name.");
 					txtName.focus();
@@ -85,9 +85,10 @@
 					if($('cbSausage').checked){
 						toppings.push(cbSausage.value);
 					}		
-					answerText+=" for "+$('txtName').value+"-"+
-							"\n"+$('ddlSize').value+
-							", "+$('ddlStyle').value+" pizza";
+
+					answerText+= " for "+$('txtName').value + "-" + "\n"
+										+$('ddlSize').value + ", "
+										+$('ddlStyle').value + " pizza";
 
 					for(var i=0;i<toppings.length;i++){
 						answerText += "\n+"+(toppings[i]);
@@ -101,8 +102,8 @@
 					}					
 				}
 			}
-			
 		}
+		
 		function reset(){
 				$('txtName').value = "";
 				$('rbPickup').checked = false;
