--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -22,27 +22,29 @@
 			if(change<100&&change>0){
 				console.log("calculating....");
 				change = $('txtChange').value;
-				var changeLeft = change;
+
 				var quarterCount = 0;
 				var dimeCount = 0;
 				var nickelCount = 0;
 				var pennyCount =0;
-				while(changeLeft>=25){
-					changeLeft-=25;
+
+				while(change>=25){
+					change-=25;
 					quarterCount++;
 				}
-				while(changeLeft>=10){
-					changeLeft-=10;
+				while(change>=10){
+					change-=10;
 					dimeCount++;
 				}
-				while(changeLeft>=5){
-					changeLeft-=5;
+				while(change>=5){
+					change-=5;
 					nickelCount++;
 				}
-				while(changeLeft>=1){
-					changeLeft-=1;
+				while(change>=1){
+					change-=1;
 					pennyCount++;
 				}
+				
 				$('spanQuarter').innerHTML = quarterCount;
 				$('spanDime').innerHTML = dimeCount;
 				$('spanNickel').innerHTML = nickelCount;
