added font, started layout redo

--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -53,7 +53,7 @@
 			}else{
 				alert("Please enter a number within range");
 			}
-
+			$('txtChange').select();
 		}
 		var $ = function(id){
 			return document.getElementById(id);
