fixing error message

--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -51,7 +51,7 @@
 				$('spanNickel').innerHTML = nickelCount;
 				$('spanPenny').innerHTML = pennyCount;
 			}else{
-				alert("Please enter a number within range");
+				alert("Please enter a valid integer from 0 to 99");
 			}
 			$('txtChange').select();
 		}
