changing spans to diabled input

--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -7,10 +7,10 @@
 	<h1>Assignment 3</h1>
 	<input type="text" id="txtChange">
 
-	<p>Quarters: <span id="spanQuarter"></span></p>
-	<p>Dimes: <span id="spanDime"></span></p>
-	<p>Nickels: <span id="spanNickel"></span></p>
-	<p>Pennies: <span id="spanPenny"></span></p>
+	<p>Quarters: <input id="spanQuarter" disabled></input></p>
+	<p>Dimes: <input id="spanDime" disabled></input></p>
+	<p>Nickels: <input id="spanNickel" disabled></input></p>
+	<p>Pennies: <input id="spanPenny" disabled></input></p>
 	<input type="button" id="btnCalculate" value="calculate">
 	<script>
 		window.onload = function(){
