making nicer looking the html

--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -19,10 +19,25 @@
 	<table>
 		<tr><td><input type="button" id="btnCalculate" value="Calculate"></td></tr>
 		<tr><td>Quarters:</td><td> <input type="text" id="txtQuarter" disabled></input> = </td><td><span id="spanQuarter"></span></td></tr>
-		<tr><td>Dimes:</td><td> <input type="text" id="txtDime" disabled></input> = </td><td><span id="spanDime"></span></td></tr>
-		<tr><td>Nickels</td><td> <input type="text" id="txtNickel" disabled></input> = </td><td><span id="spanNickel"></span></td></tr>
-		<tr><td>Pennies:</td><td> <input type="text" id="txtPenny" disabled></input> = </td><td><span id="spanPenny"></span></td></tr>
-		<tr><td>Total:</td><td> <input type="text" id="txtTotal" value="Total: " disabled></input> = </td><td><span id="spanTotal"></span></td></tr>
+		<tr><td>Dimes:</td>
+				<td><input type="text" id="txtDime" disabled></input> = </td>
+				<td><span id="spanDime"></span></td>
+		</tr>
+		<tr>
+			<td>Nickels</td>
+			<td><input type="text" id="txtNickel" disabled></input> = </td>
+			<td><span id="spanNickel"></span></td>
+		</tr>
+		<tr>
+			<td>Pennies:</td>
+			<td> <input type="text" id="txtPenny" disabled></input> = </td>
+			<td><span id="spanPenny"></span></td>
+		</tr>
+		<tr>
+			<td>Total:</td>
+			<td> <input type="text" id="txtTotal" value="Total:" disabled></input> = </td>
+			<td><span id="spanTotal"></span></td>
+		</tr>
 	</table>
 	<script>
 		window.onload = function(){
