--- a/javascript/assignment3/index.html
+++ b/javascript/assignment3/index.html
@@ -90,8 +90,8 @@
 				//catch all for invalid input
 				alert("Please enter a valid integer from 0 to 99");
 			}
+			//position for new input regardless of if/else outcome
 			$('txtChange').select();
-
 		}
 		//determine if number is an integer
 		var isInt=function(number){
