--- a/javascript/assignment5/index.html
+++ b/javascript/assignment5/index.html
@@ -71,7 +71,7 @@
 				//in case of bad input, let the user know
 				alert("Score must be numeric and between 0 and 100");
 			}
-			//offering a hand back to the top regardless of if/else
+			//offering a hand back to the top regardless of if/else outcome
 			$('txtScore').focus();
 		}
 		function clear(){
